--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "node src/build.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "iconv-lite": "^0.6.3",
+    "open": "^10.1.2"
   },
   "devDependencies": {
     "jest": "^29.0.0",
