--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,7 +13,6 @@ jobs:
       # Configuracion de la app
       - name: setup
         # Se utiliza un action para la instalacion de node o php, o lo que se utilice
-        uses: actions/setup-node@4
+        uses: actions/setup-node@v4
         with:
           node-version: '18'
-          
