--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -44,3 +44,7 @@ jobs:
 
       - name: Instalar dependencias
         run: npm install
+
+      - name: Run test
+        # Se hace test para valirdar que los cambios no rompan lo que esta en producicion
+        run: npm run test
