--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -50,6 +50,8 @@ jobs:
         run: npm run test
   
   deploy:
+  # condicional con always/succed/failure
+    if: ${{ always() }}
     runs-on: ubuntu-latest
     needs: build
 
